--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,7 @@
         ],
         "check-style": "vendor/bin/php-cs-fixer fix --using-cache=no --diff --dry-run",
         "fix-style": "vendor/bin/php-cs-fixer fix --using-cache=no",
-        "stan": "vendor/bin/phpstan analyse src",
+        "stan": "vendor/bin/phpstan analyse src --memory-limit=512M",
         "test": "vendor/bin/phpunit"
     }
 }
