--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "require": {
         "php": "^7.4|^8.0",
         "laravel/framework": "^8.22",
-        "ramsey/uuid": "^4.1"
+        "ramsey/uuid": "^4.1",
+        "vinkla/shield": "^7.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
