--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0",
+        "php": "^8.0",
         "laravel/framework": "^8.22",
         "ramsey/uuid": "^4.1",
         "vinkla/shield": "^7.1"
