Increased stan memory limit to 1G

--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,7 @@
         ],
         "check-style": "vendor/bin/php-cs-fixer fix --using-cache=no --diff --dry-run",
         "fix-style": "vendor/bin/php-cs-fixer fix --using-cache=no",
-        "stan": "vendor/bin/phpstan analyse src --memory-limit=512M",
+        "stan": "vendor/bin/phpstan analyse src --memory-limit=1G",
         "test": "vendor/bin/phpunit"
     }
 }
