--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,9 @@
         "phpunit/phpunit": "^9.5",
         "friendsofphp/php-cs-fixer": "^2.17",
         "brainmaestro/composer-git-hooks": "^2.8",
-        "phpstan/phpstan": "^0.12.67",
-        "orchestra/testbench": "^6.7"
+        "orchestra/testbench": "^6.7",
+        "vimeo/psalm": "^4.6",
+        "psalm/plugin-laravel": "^1.4"
     },
     "autoload": {
         "psr-4": {
@@ -50,7 +51,7 @@
         ],
         "check-style": "vendor/bin/php-cs-fixer fix --using-cache=no --diff --dry-run",
         "fix-style": "vendor/bin/php-cs-fixer fix --using-cache=no",
-        "stan": "vendor/bin/phpstan analyse src --memory-limit=1G",
+        "stan": "vendor/bin/psalm",
         "test": "vendor/bin/phpunit"
     }
 }
