--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "brainmaestro/composer-git-hooks": "^2.8",
         "orchestra/testbench": "^6.7",
         "vimeo/psalm": "^4.6",
-        "psalm/plugin-laravel": "^1.4"
+        "psalm/plugin-laravel": "^1.4",
+        "infection/infection": "^0.21.0"
     },
     "autoload": {
         "psr-4": {
