--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "vinkla/shield": "^7.1"
     },
     "require-dev": {
+        "ext-xdebug": "*",
         "phpunit/phpunit": "^9.5",
         "friendsofphp/php-cs-fixer": "^2.17",
         "brainmaestro/composer-git-hooks": "^2.8",
