--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "php": "^8.0",
         "laravel/framework": "^8.22",
         "ramsey/uuid": "^4.1",
-        "vinkla/shield": "^7.1"
+        "vinkla/shield": "^7.1",
+        "thtg88/journalism": "^0.1.3"
     },
     "require-dev": {
         "ext-xdebug": "*",
